--- a/gui/src/tabs/monitors-tab.ui
+++ b/gui/src/tabs/monitors-tab.ui
@@ -32,6 +32,15 @@
   <layout class="QVBoxLayout" name="verticalLayout" stretch="0">
    <item>
     <widget class="QTableWidget" name="tableMonitors">
+     <property name="editTriggers">
+      <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+     <property name="showDropIndicator" stdset="0">
+      <bool>false</bool>
+     </property>
+     <property name="dragDropOverwriteMode">
+      <bool>false</bool>
+     </property>
      <column>
       <property name="text">
        <string>Search</string>
