--- a/gui/src/tabs/monitors-tab.ui
+++ b/gui/src/tabs/monitors-tab.ui
@@ -43,6 +43,11 @@
      </property>
      <column>
       <property name="text">
+       <string/>
+      </property>
+     </column>
+     <column>
+      <property name="text">
        <string>Search</string>
       </property>
      </column>
