--- a/gui/src/tabs/tag-tab.ui
+++ b/gui/src/tabs/tag-tab.ui
@@ -373,7 +373,7 @@
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,1,1,1,0,1,1,1,0,0">
+    <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,1,1,1,1,1,1,1,0,0">
      <item>
       <widget class="QPushButton" name="buttonFirstPage">
        <property name="enabled">
@@ -469,7 +469,7 @@
      <item>
       <widget class="QPushButton" name="buttonMonitor">
        <property name="text">
-        <string>Monitor (WIP)</string>
+        <string>Monitor</string>
        </property>
       </widget>
      </item>
