--- a/gui/src/monitor-window.ui
+++ b/gui/src/monitor-window.ui
@@ -45,14 +45,7 @@
         </widget>
        </item>
        <item row="0" column="1">
-        <widget class="QLineEdit" name="lineSearch">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
-         <property name="readOnly">
-          <bool>true</bool>
-         </property>
-        </widget>
+        <widget class="QLineEdit" name="lineSearch"/>
        </item>
        <item row="2" column="0">
         <widget class="QLabel" name="labelLastSearch">
@@ -109,14 +102,7 @@
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QLineEdit" name="linePostFilters">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
-         <property name="readOnly">
-          <bool>true</bool>
-         </property>
-        </widget>
+        <widget class="QLineEdit" name="linePostFilters"/>
        </item>
        <item row="3" column="1">
         <widget class="QPushButton" name="pushButton">
