Add 'load' and 'save' buttons for downloads in 'File' menu (issue #1628)

--- a/gui/resources/resources.qrc
+++ b/gui/resources/resources.qrc
@@ -65,5 +65,6 @@
         <file>images/status/ignored.png</file>
         <file>images/back.png</file>
         <file>images/loading.gif</file>
+        <file>images/icons/open.png</file>
     </qresource>
 </RCC>
