--- a/gui/src/monitor-window.ui
+++ b/gui/src/monitor-window.ui
@@ -105,12 +105,29 @@
         <widget class="QLineEdit" name="linePostFilters"/>
        </item>
        <item row="3" column="1">
-        <widget class="QPushButton" name="pushButton">
+        <widget class="QPushButton" name="buttonSources">
          <property name="styleSheet">
           <string notr="true"/>
          </property>
          <property name="text">
           <string>Edit sources</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="0">
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>Delay</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="1">
+        <widget class="QSpinBox" name="spinDelay">
+         <property name="suffix">
+          <string> min</string>
+         </property>
+         <property name="maximum">
+          <number>100000</number>
          </property>
         </widget>
        </item>
@@ -225,7 +242,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>pushButton</sender>
+   <sender>buttonSources</sender>
    <signal>clicked()</signal>
    <receiver>MonitorWindow</receiver>
    <slot>openSourcesWindow()</slot>
