--- a/gui/src/settings/options-window.ui
+++ b/gui/src/settings/options-window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>666</width>
-    <height>477</height>
+    <height>508</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -800,7 +800,7 @@
           </item>
          </widget>
         </item>
-        <item row="11" column="0" colspan="2">
+        <item row="12" column="0" colspan="2">
          <widget class="QLabel" name="label_21">
           <property name="text">
            <string>&lt;i&gt;File's identity is based on the MD5 algorithm.&lt;/i&gt;</string>
@@ -821,21 +821,21 @@
           </property>
          </widget>
         </item>
-        <item row="12" column="0" colspan="2">
+        <item row="13" column="0" colspan="2">
          <widget class="QCheckBox" name="checkKeepDeletedMd5">
           <property name="text">
            <string>Keep deleted files in the MD5 list</string>
           </property>
          </widget>
         </item>
-        <item row="13" column="0">
+        <item row="14" column="0">
          <widget class="QLabel" name="label_2">
           <property name="text">
            <string>If an image yields multiple files</string>
           </property>
          </widget>
         </item>
-        <item row="13" column="1">
+        <item row="14" column="1">
          <widget class="QComboBox" name="comboMultipleFiles">
           <item>
            <property name="text">
@@ -849,14 +849,14 @@
           </item>
          </widget>
         </item>
-        <item row="14" column="0">
+        <item row="15" column="0">
          <widget class="QLabel" name="label_5">
           <property name="text">
            <string>Temporary directory</string>
           </property>
          </widget>
         </item>
-        <item row="15" column="0" colspan="2">
+        <item row="16" column="0" colspan="2">
          <widget class="QLabel" name="label_6">
           <property name="text">
            <string>&lt;i&gt;Leave empty to use the default temporary directory.&lt;/i&gt;</string>
@@ -866,7 +866,7 @@
           </property>
          </widget>
         </item>
-        <item row="14" column="1">
+        <item row="15" column="1">
          <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
            <widget class="QLineEdit" name="lineTempPathOverride"/>
@@ -879,6 +879,42 @@
            </widget>
           </item>
          </layout>
+        </item>
+        <item row="11" column="0">
+         <widget class="QLabel" name="label_15">
+          <property name="text">
+           <string>If it's in the same directory</string>
+          </property>
+         </widget>
+        </item>
+        <item row="11" column="1">
+         <widget class="QComboBox" name="comboMd5DuplicatesSameDir">
+          <item>
+           <property name="text">
+            <string>Save</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Copy</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Move</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Link</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Don't save</string>
+           </property>
+          </item>
+         </widget>
         </item>
        </layout>
       </widget>
@@ -1044,8 +1080,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>100</width>
-             <height>30</height>
+             <width>363</width>
+             <height>387</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="scrollAreaWidgetLayout">
