--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -6,6 +6,10 @@ class: docs
 {%capture header %}
 	<div class="head">
 		<h1>{{ page.title }}</h1>
+
+		<ul class="nav navbar-nav navbar-right navbar-bottom">
+			<li><a href="{{site.github.repository_url}}/blob/gh-pages/{{page.path}}">Edit this page</a></li>
+		</ul>
 	</div>
 {% endcapture %}
 
