--- a/gui/src/tabs/favorites-tab.ui
+++ b/gui/src/tabs/favorites-tab.ui
@@ -334,7 +334,7 @@ QWidget#scrollAreaWidgetContents {
                <x>0</x>
                <y>0</y>
                <width>780</width>
-               <height>188</height>
+               <height>190</height>
               </rect>
              </property>
              <property name="sizePolicy">
@@ -448,11 +448,11 @@ QWidget#scrollAreaWidgetContents {
             <x>0</x>
             <y>0</y>
             <width>780</width>
-            <height>130</height>
+            <height>127</height>
            </rect>
           </property>
           <property name="styleSheet">
-           <string notr="true">background-color:transparent;</string>
+           <string notr="true">#widgetResults { background-color:transparent; }</string>
           </property>
           <layout class="QGridLayout" name="layoutResultsScroll">
            <property name="leftMargin">
