Extract KFL dock logic to its own class

--- a/gui/src/main-window.ui
+++ b/gui/src/main-window.ui
@@ -215,8 +215,8 @@
    <attribute name="dockWidgetArea">
     <number>1</number>
    </attribute>
-   <widget class="QWidget" name="dockKflLayout">
-    <layout class="QVBoxLayout" name="verticalLayout_7">
+   <widget class="QWidget" name="dockKflContents">
+    <layout class="QVBoxLayout" name="dockKflLayout">
      <property name="leftMargin">
       <number>0</number>
      </property>
@@ -229,70 +229,6 @@
      <property name="bottomMargin">
       <number>0</number>
      </property>
-     <item>
-      <widget class="QScrollArea" name="dockKflScroll">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Ignored">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="frameShape">
-        <enum>QFrame::NoFrame</enum>
-       </property>
-       <property name="widgetResizable">
-        <bool>true</bool>
-       </property>
-       <widget class="QWidget" name="dockKflScrollLayout_2">
-        <property name="geometry">
-         <rect>
-          <x>0</x>
-          <y>0</y>
-          <width>190</width>
-          <height>45</height>
-         </rect>
-        </property>
-        <layout class="QVBoxLayout" name="dockKflScrollLayout_1">
-         <property name="spacing">
-          <number>0</number>
-         </property>
-         <item>
-          <spacer name="verticalSpacer_5">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item>
-          <layout class="QVBoxLayout" name="dockKflScrollLayout">
-           <property name="spacing">
-            <number>0</number>
-           </property>
-          </layout>
-         </item>
-         <item>
-          <spacer name="verticalSpacer_6">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-        </layout>
-       </widget>
-      </widget>
-     </item>
     </layout>
    </widget>
   </widget>
@@ -819,7 +755,6 @@
  <tabstops>
   <tabstop>tabWidget</tabstop>
   <tabstop>dockInternetScroll</tabstop>
-  <tabstop>dockKflScroll</tabstop>
   <tabstop>comboOrderFav</tabstop>
   <tabstop>comboAscFav</tabstop>
   <tabstop>scrollArea_5</tabstop>
